# wolf_bot

./: .env.example  CLAUDE.md  enhanced_llm.py  game.py  history.py  llm.py  main.py  model_config_manager.py  pyproject.toml  role.py  setup_apis.py  web.py
prompts/: prompt_divine_fast.yaml  prompt_divine_simple.yaml  prompt_hunter_revenge.yaml  prompt_speak_fast.yaml  prompt_speak_simple.yaml
public/: index.html
public/src/: index.js  replay.js
